// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`BodyPortalToastContainer matches snapshot 1`] = `
<body>
  <main
    id="root"
  />
  <div
    class="toast-container"
    data-portal-slot="toast"
  >
    <div
      class="toast"
      style="--toast-animation-duration: 500ms;"
    >
      <div
        class="neutral"
      >
        <div
          class="title"
        >
          Neutral
        </div>
        <div
          class="body"
        >
          message
        </div>
      </div>
    </div>
    <div
      class="toast toast-dismissable"
      style="--toast-animation-duration: 500ms; animation-delay: 3500ms;"
    >
      <div
        class="failure"
      >
        <div
          class="title"
        >
          Error
        </div>
        <div
          class="body"
        >
          message
        </div>
      </div>
    </div>
    <div
      class="toast toast-dismissable"
      style="--toast-animation-duration: 500ms; animation-delay: 1500ms;"
    >
      <div
        class="success"
      >
        <div
          class="title"
        >
          Success
        </div>
        <div
          class="body"
        >
          message
        </div>
      </div>
    </div>
  </div>
</body>
`;

exports[`BodyPortalToastContainer uses inline prop 1`] = `
<body>
  <main
    id="root"
  />
  <div
    class="toast-container toast-container-inline"
    data-portal-slot="toast"
  >
    <div
      class="toast toast-inline"
      style="--toast-animation-duration: 500ms;"
    >
      <div
        class="neutral"
      >
        <div
          class="title"
        >
          Neutral
        </div>
        <div
          class="body"
        >
          message
        </div>
      </div>
    </div>
    <div
      class="toast toast-inline toast-dismissable"
      style="--toast-animation-duration: 500ms; animation-delay: 3500ms;"
    >
      <div
        class="failure"
      >
        <div
          class="title"
        >
          Error
        </div>
        <div
          class="body"
        >
          message
        </div>
      </div>
    </div>
    <div
      class="toast toast-inline toast-dismissable"
      style="--toast-animation-duration: 500ms; animation-delay: 1500ms;"
    >
      <div
        class="success"
      >
        <div
          class="title"
        >
          Success
        </div>
        <div
          class="body"
        >
          message
        </div>
      </div>
    </div>
  </div>
</body>
`;

exports[`ToastContainer matches snapshot 1`] = `
<body>
  <div>
    <div
      aria-live="polite"
      class="toast-container"
    >
      <div
        class="toast"
        style="--toast-animation-duration: 500ms;"
      >
        <div
          class="neutral"
        >
          <div
            class="title"
          >
            Neutral
          </div>
          <div
            class="body"
          >
            message
          </div>
        </div>
      </div>
      <div
        class="toast toast-dismissable"
        style="--toast-animation-duration: 500ms; animation-delay: 3500ms;"
      >
        <div
          class="failure"
        >
          <div
            class="title"
          >
            Error
          </div>
          <div
            class="body"
          >
            message
          </div>
        </div>
      </div>
      <div
        class="toast toast-dismissable"
        style="--toast-animation-duration: 500ms; animation-delay: 1500ms;"
      >
        <div
          class="success"
        >
          <div
            class="title"
          >
            Success
          </div>
          <div
            class="body"
          >
            message
          </div>
        </div>
      </div>
    </div>
  </div>
</body>
`;

exports[`ToastContainer uses inline prop 1`] = `
<body>
  <div>
    <div
      aria-live="polite"
      class="toast-container toast-container-inline"
    >
      <div
        class="toast toast-inline"
        style="--toast-animation-duration: 500ms;"
      >
        <div
          class="neutral"
        >
          <div
            class="title"
          >
            Neutral
          </div>
          <div
            class="body"
          >
            message
          </div>
        </div>
      </div>
      <div
        class="toast toast-inline toast-dismissable"
        style="--toast-animation-duration: 500ms; animation-delay: 3500ms;"
      >
        <div
          class="failure"
        >
          <div
            class="title"
          >
            Error
          </div>
          <div
            class="body"
          >
            message
          </div>
        </div>
      </div>
      <div
        class="toast toast-inline toast-dismissable"
        style="--toast-animation-duration: 500ms; animation-delay: 1500ms;"
      >
        <div
          class="success"
        >
          <div
            class="title"
          >
            Success
          </div>
          <div
            class="body"
          >
            message
          </div>
        </div>
      </div>
    </div>
  </div>
</body>
`;
